Answered questions Added -O3 to hw4

--- a/vision-hw4/Makefile
+++ b/vision-hw4/Makefile
@@ -14,7 +14,7 @@ OBJDIR=./obj/
 CC=gcc
 AR=ar
 ARFLAGS=rcs
-OPTS=-Ofast
+OPTS=-O3
 LDFLAGS= -lm -pthread 
 COMMON= -Iinclude/ -Isrc/ 
 CFLAGS=-Wall -Wno-unknown-pragmas -Wfatal-errors -fPIC
